    apt-cache search catching. (Closes: #426519)
  * Remove debian/NEWS, there's nothing new since Etch's release.
    (Closes: #376580)
  * Add debian/patches/pbmprint.dpatch: Fix printing of PBM files, thanks to
    Eugeniy Meshcheryakov! (Closes: #313536)
  * debian/cupsys.preinst: Only chown /var/run/cups if it exists. (LP #156634)

 -- Martin Pitt <mpitt@debian.org>  Mon, 10 Mar 2008 18:06:17 +0100

cupsys (1.3.6-1) unstable; urgency=low

  * New upstream bugfix release.
  * Remove the following patches which are upstream now:
    - fix_regression_reactivate_net_ifaces_changes_detection.dpatch
    - web-interface-breaks-default-auth-setting.dpatch
  * search_mime_files_in_usr_share.dpatch: Greatly simplified the patch by
    using mimeMerge(), so that it is more robust against upstream changes.
    Forwarded to STR#2719.
  * Dropped cupsd.conf-AllowLocal.dpatch; it does not do anything good any
    more for the current web and GUI administration tools (they handle this
    fine by themselves), so it's obsolete now.
  * Drop enable{sharing,browsing} and {sharing,browsing}_status scripts. They
    have never been used in Debian, not used any more in Ubuntu, and the
    current frontends (web, system-config-printer, etc.) do this in a much
    better way.
  * debian/docs: Remove redundant LICENSE.txt.
  * debian/rules: Add a generic rule to install lintian overrides in
    debian/packagename.lintian.
  * Add lintian overrides for unjustified/wontfix complaints about libcupsys2
    and cupsys.
  * debian/cupsys.doc-base: Remove erroneous whitespace in the section
    separator.
  * debian/rules: Remove *.o and *.so files from PHP scripting examples
    directory (it's /usr/share after all).
  * debian/cupsys.init.d: Add Short-Description.
  * debian/rules: Do not ship an empty /usr/share/cups/model/ directory.

 -- Martin Pitt <mpitt@debian.org>  Tue, 26 Feb 2008 14:23:50 +0100

cupsys (1.3.5-2) unstable; urgency=low

  [ Martin Pitt ]