@@ -1,3 +1,2 @@
 debian/filters/*
 debian/printer.schema
-scripting
